--- a/notes/serverless.yml
+++ b/notes/serverless.yml
@@ -5,7 +5,7 @@ provider:
   name: aws
   runtime: nodejs16.x
   lambdaHashingVersion: 20201221
-  stage: dev
+  stage: ${opt:stage, 'dev'}
   region: us-east-1
 
 functions:
@@ -75,8 +75,7 @@ functions:
           path: notes
           authorizer:
             name: userpool_authorizer
-            type: COGNITO_USER_POOLS
-            arn: !GetAtt cognitoUserPool.Arn
+            arn: ${ssm:/notes/${self:provider.stage}/userPoolArn}
 
 plugins:
   - serverless-iam-roles-per-function
