--- a/config/deploy/buildspec.dev.yml
+++ b/config/deploy/buildspec.dev.yml
@@ -8,7 +8,6 @@ phases:
     commands:
       - echo Installing serverless CLI
       - npm i -g serverless@2
-      - cd notes
       - echo Installing npm dependencies of notes service
       - npm install
   build:
@@ -18,8 +17,8 @@ phases:
       - serverless deploy --stage dev
 artifacts:
   files:
-    - notes/my-artifact/*
+    - my-artifact/*
   name: MyProjectArtifacts
 cache:
   paths:
-    - 'notes/node_modules/**/*'
+    - 'node_modules/**/*'
