--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"All tests passed!\""
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1487.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "serverless-iam-roles-per-function": "^3.2.0"
   }
 }
