--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1487.0"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "jest": "^29.7.0",
     "serverless-iam-roles-per-function": "^3.2.0"
   }
