--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "devDependencies": {
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
-    "serverless-iam-roles-per-function": "^3.2.0"
+    "promise": "^8.3.0",
+    "serverless-iam-roles-per-function": "^3.2.0",
+    "superagent": "^8.1.2",
+    "superagent-promise": "^1.1.0"
   }
 }
