--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/aws-lambda": "^8.10.130",
     "aws-jwt-verify": "^3.4.0",
     "aws-sdk": "^2.1487.0"
   },
@@ -18,7 +19,9 @@
     "jest": "^29.7.0",
     "promise": "^8.3.0",
     "serverless-iam-roles-per-function": "^3.2.0",
+    "serverless-plugin-typescript": "^2.1.5",
     "superagent": "^8.1.2",
-    "superagent-promise": "^1.1.0"
+    "superagent-promise": "^1.1.0",
+    "typescript": "^5.3.2"
   }
 }
